--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -7,21 +7,21 @@
 }
 
 @mixin pc-screen {
-    @media screen and (min-width: map-get($breakpoint, pc-screen)) {
+    @media screen and (min-width: map-get($breakpoint, pc-screen-min)) {
         @content;
     }
 }
 
 @mixin tablet-screen {
     // @media screen and (min-width: map-get($breakpoint, tablet-screen)) and (max-width: calc(map-get($breakpoint, tablet-screen)-1)) {
-        @media screen and (min-width: map-get($breakpoint, tablet-screen)) and (max-width: calc(map-get($breakpoint, tablet-big-screen) - 1px)) {
+        @media screen and (min-width: map-get($breakpoint, tablet-screen-min)) and (max-width: map-get($breakpoint, tablet-screen-max)) {
         @content;
     }
 }
 
 @mixin tablet-big-screen {
     // @media screen and (min-width: map-get($breakpoint, tablet-screen)) and (max-width: calc(map-get($breakpoint, tablet-screen)-1)) {
-        @media screen and (min-width: map-get($breakpoint, tablet-big-screen)) and (max-width: calc(map-get($breakpoint, pc-screen) - 1px)) {
+        @media screen and (min-width: map-get($breakpoint, tablet-big-screen-min)) and (max-width: map-get($breakpoint, tablet-big-screen-max)) {
         @content;
     }
 }
