--- a/sass/component/_card.scss
+++ b/sass/component/_card.scss
@@ -115,8 +115,11 @@
         padding-right: 45px;
         padding-top: 15px;
         display: flex;
-        // justify-content: space-between;
         align-items: baseline;
+        @include pc-screen {
+            justify-content: center;
+            font-size: 2em;
+        }
     }
     & i:hover {
         cursor: pointer;
@@ -136,10 +139,18 @@
     justify-content: space-between;
     background-color: white;
     margin-bottom: 20px;
+    @include pc-screen {
+        height: 100px;
+        min-width: 400px;
+    }
+    @include tablet-big-screen {
+        height: 100px;
+        min-width: auto;
+    }
     
     &__titre {
         font-weight: bold;
-        font-size: 1.1em;
+        font-size: 1.1em;        
     }
     &__prix {
         font-weight: bold;
@@ -150,6 +161,20 @@
         flex-wrap: nowrap;
         justify-content: space-between;
         font-size: 0.9em;
+        & .text-overflow {
+            width: 200px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+    }
+    &__left {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        // @include pc-screen {
+        //     flex-direction: ro;
+        // }
     }
     &__right {
         background-color: $color-tertiaire;
