--- a/sass/component/_photo.scss
+++ b/sass/component/_photo.scss
@@ -1,6 +1,12 @@
 .photo {
     width: 100%;
-    // @include tablet-screen {
-    //     max-width: 50%;
-    // }
+    @include pc-screen {
+        height: 500px;
+        object-fit: cover;
+    }
+    @include tablet-big-screen {
+        height: 400px;
+        object-fit: cover;
+    }
+    
 }
