--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -10,7 +10,9 @@ $main-container-dur: $loader-spinner-dur + $loader-spinner-delay;
 $show-card-menu-detail-dur: 1000ms;
 
 $breakpoint: (
-    pc-screen : 1260px, // à partir de 
-    tablet-big-screen: 900px, // à partir de 
-    tablet-screen: 480px // à partir de 
+    pc-screen-min : 1260px, // à partir de 
+    tablet-big-screen-max: 1259px,
+    tablet-big-screen-min: 900px, // à partir de 
+    tablet-screen-max: 899px,
+    tablet-screen-min: 480px // à partir de 
 );
