--- a/sass/component/_card.scss
+++ b/sass/component/_card.scss
@@ -8,11 +8,12 @@
     align-items: center;
     box-shadow: 0px 5px 10px darken-color($color-quaternaire, 10%);
     position: relative;
-    max-width: 550px;
+    max-width: 538px;
     width: 100%;
-    @include tablet-big-screen {
-        max-width: 260px;
-    }
+    margin: 10px;
+    // @include tablet-screen {
+    //     max-width: 260px;
+    // }
     &__circle {
         height: 25px;
         width: 25px;
@@ -39,12 +40,20 @@
 
 #view-card-restaurants {
     display: flex;
-    flex-wrap: wrap;
-    max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
+    flex-direction: column;    
+    & .card-line {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        @include pc-screen {
+            flex-direction: row;
+        }
+        & h1 {
+            position: absolute;
+            top: -60px;
+        }
+    }
 }
 
 
@@ -53,7 +62,13 @@
     height: 250px;
     position: relative;
     margin-bottom: 20px; 
-    max-width: 380px;   
+    max-width: 550px;
+    @include pc-screen 
+    {
+        max-width: 380px;
+        margin: 20px; 
+    }
+      
     &__img {
         height: 70%;
         border-top-left-radius: 10px;
@@ -143,7 +158,7 @@
         height: 100px;
         min-width: 400px;
     }
-    @include tablet-big-screen {
+    @include tablet-screen {
         height: 100px;
         min-width: auto;
     }
@@ -158,11 +173,9 @@
     }
     &__detail {
         display: flex;
-        flex-wrap: nowrap;
         justify-content: space-between;
         font-size: 0.9em;
         & .text-overflow {
-            width: 200px;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
@@ -172,9 +185,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        // @include pc-screen {
-        //     flex-direction: ro;
-        // }
+        width: 100%;
     }
     &__right {
         background-color: $color-tertiaire;
@@ -199,13 +210,18 @@
         cursor: pointer;
         & .card-menu-detail__right 
         {
-            width: 60px;
+            min-width: 60px;
             opacity: 1;
             transform: scaleX(1);
             & i {
                 transform: rotate(360deg);
             }
 
+        }
+
+        & .card-menu-detail__left
+        {
+            width: auto;
         }
     }     
     
