--- a/sass/component/_container.scss
+++ b/sass/component/_container.scss
@@ -23,15 +23,21 @@
 
 .card-fonction-container {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     height: 100%;
     width: 100%;
-    @include tablet-big-screen {
-        flex-direction: row;
+    position: relative;
+    margin-top: 60px;
+    @include tablet-screen {
         padding-left: 20px;
         padding-right: 20px;
+    }
+
+    & h1 {
+        position: absolute;
+        top: -60px;
     }
 }
 
@@ -39,6 +45,16 @@
     @include pc-screen {
         display: flex;
     }
+}
+
+.container-restaurants {
+    max-width: 1000px;
+    padding-top: 60px;
+    display: flex;
+    justify-content: center;
+    // & h1 {
+    //     margin-left: 20px;
+    // }
 }
 
 @keyframes main-container {
