--- a/sass/component/_photo.scss
+++ b/sass/component/_photo.scss
@@ -1,11 +1,11 @@
 .photo {
     width: 100%;
     @include pc-screen {
-        height: 500px;
+        // height: 500px;
         object-fit: cover;
     }
-    @include tablet-big-screen {
-        height: 400px;
+    @include tablet-screen {
+        // height: 400px;
         object-fit: cover;
     }
     
