menu1.html fix animation + size photo breakpoint

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -371,7 +371,8 @@
 @media screen and (min-width: 1024px) {
   .card-menu-detail {
     height: 100px;
-    min-width: 400px;
+    min-width: 310px;
+    flex: 0.3;
   }
 }
 @media screen and (min-width: 600px) and (max-width: 1023px) {
@@ -393,13 +394,9 @@
   justify-content: space-between;
   font-size: 0.9em;
 }
-.card-menu-detail__detail .text-overflow {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
 .card-menu-detail__left {
   display: flex;
+  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: space-evenly;
   width: 100%;
@@ -424,6 +421,9 @@
 .card-menu-detail:hover {
   cursor: pointer;
 }
+.card-menu-detail:hover .card-menu-detail__left {
+  width: 70%;
+}
 .card-menu-detail:hover .card-menu-detail__right {
   min-width: 60px;
   opacity: 1;
@@ -432,8 +432,11 @@
 .card-menu-detail:hover .card-menu-detail__right i {
   transform: rotate(360deg);
 }
-.card-menu-detail:hover .card-menu-detail__left {
-  width: auto;
+
+.text-overflow {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .heart {
@@ -470,11 +473,13 @@
 @media screen and (min-width: 1024px) {
   .photo {
     object-fit: cover;
+    height: 350px;
   }
 }
 @media screen and (min-width: 600px) and (max-width: 1023px) {
   .photo {
     object-fit: cover;
+    height: 250px;
   }
 }
 
