Fix Back arrow & change loader-spinner div:nth-child

--- a/sass/component/_heart.scss
+++ b/sass/component/_heart.scss
@@ -19,7 +19,7 @@
 
 .heart-anim {
     &:hover {
-        animation: color-heart 500ms 100ms forwards;
+        animation: color-heart 500ms 100ms both;
     }
 }
 
