--- a/sass/component/_loader-spinner.scss
+++ b/sass/component/_loader-spinner.scss
@@ -1,27 +1,21 @@
 .loader-spinner {
-    // background: transparent;
-    // background: $color-tertiaire;
-    // display: inline-block;
     position: absolute;
     left: calc(50% - 37px);
     top: 50%;
     width: 100px;
     height: 100px;
     z-index: 1;
-    // cursor: wait;
-    // opacity: 0;
-    animation: load-spinner 0ms 3000ms both;
+    animation: load-spinner $loader-spinner-delay $loader-spinner-dur both;
 }
 
 .loader-spinner div {
     transform-origin: 40px 40px;
-    // animation: load-spinner 1.2s linear infinite;
     animation: loader-spinner 1.2s infinite both;
 
 }
 
 .loader-spinner div:after {
-    content: " ";
+    content: "";
     display: block;
     position: absolute;
     top: 3px;
@@ -32,66 +26,15 @@
     background: $color-secondary;
   }
 
-  .loader-spinner div:nth-child(1) {
-    transform: rotate(0deg);
-    animation-delay: -1.1s;
+  @for $i from 1 to 13 {
+    .loader-spinner div:nth-child(#{$i}) {
+      $deg: 30deg * ($i - 1);
+      $delay: ($i - 12) * 0.1s;
+      transform: rotate($deg);
+      animation-delay: $delay;
+    }
   }
-
-  .loader-spinner div:nth-child(2) {
-    transform: rotate(30deg);
-    animation-delay: -1s;
-  }
-
-  .loader-spinner div:nth-child(3) {
-    transform: rotate(60deg);
-    animation-delay: -0.9s;
-  }
-
-  .loader-spinner div:nth-child(4) {
-    transform: rotate(90deg);
-    animation-delay: -0.8s;
-  }
-
-  .loader-spinner div:nth-child(5) {
-    transform: rotate(120deg);
-    animation-delay: -0.7s;
-  }
-
-  .loader-spinner div:nth-child(6) {
-    transform: rotate(150deg);
-    animation-delay: -0.6s;
-  }
-
-  .loader-spinner div:nth-child(7) {
-    transform: rotate(180deg);
-    animation-delay: -0.5s;
-  }
-
-  .loader-spinner div:nth-child(8) {
-    transform: rotate(210deg);
-    animation-delay: -0.4s;
-  }
-
-  .loader-spinner div:nth-child(9) {
-    transform: rotate(240deg);
-    animation-delay: -0.3s;
-  }
-
-  .loader-spinner div:nth-child(10) {
-    transform: rotate(270deg);
-    animation-delay: -0.2s;
-  }
-
-  .loader-spinner div:nth-child(11) {
-    transform: rotate(300deg);
-    animation-delay: -0.1s;
-  }
-
-  .loader-spinner div:nth-child(12) {
-    transform: rotate(330deg);
-    animation-delay: 0s;
-  }
-
+    
   @keyframes loader-spinner {
     0% {
       opacity: 1;
