--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 @import "./utils/_variables.scss";
-@import "./utils/mixins.scss";
-@import "./utils/functions";
+@import "./utils/_mixins.scss";
+@import "./utils/_functions.scss";
 
 @import "./base/_font.scss";
 
