--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,7 +22,7 @@
 }
 
 .loader-spinner div:after {
-  content: " ";
+  content: "";
   display: block;
   position: absolute;
   top: 3px;
@@ -456,7 +456,7 @@
 }
 
 .heart-anim:hover {
-  animation: color-heart 500ms 100ms forwards;
+  animation: color-heart 500ms 100ms both;
 }
 
 @keyframes color-heart {
@@ -497,6 +497,7 @@
 
 header {
   display: flex;
+  position: relative;
   align-items: center;
   justify-content: center;
   box-shadow: 0px 5px 5px #d1d1d1;
@@ -509,6 +510,20 @@ header {
 header .header__logo img {
   width: 100%;
   transform: scale(0.5);
+}
+header .header__icon {
+  position: absolute;
+  left: 10px;
+}
+@media screen and (min-width: 600px) and (max-width: 1023px) {
+  header .header__icon {
+    left: 20px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  header .header__icon {
+    left: 40px;
+  }
 }
 
 body {
